<resources>
    <string name="app_name">DRB</string>
    <string name="start">start</string>
    <string name="next">next</string>
    <string name="more">More</string>
    <string name="risks">Risks</string>
    <string name="trips">Trips</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyBtCSwehQfoAdYemxDzJrKInCYafq83e6g</string>
    <string name="save">save</string>
    <string name="ok">ok</string>
    <string name="choose_location">Choose location</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="password">Password</string>
    <string name="store_owner">Store Owner</string>
    <string name="user">User</string>
    <string name="sign_in_as">Register as</string>
    <string name="add_bio_optional">Add Bio (Optional)</string>
    <string name="user_name">User Name</string>
    <string name="display_name">Display Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="store_name">Store Name</string>
    <string name="select_store_type">Select Store Type</string>
    <string name="turn_on_off_notifications">Turn On/Off Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="blocked_user_list">Blocked User List</string>
    <string name="gallery">Gallery</string>
    <string name="trips_history">Trips History</string>
    <string name="sign_out">Sign Out</string>
    <string name="get_directions">Get Directions</string>
    <string name="start_trip">Start Trip</string>
    <string name="connection_error">Connection Error</string>
    <string name="k_m">KM</string>
    <string name="Estimated_Time">Estimated Time</string>
    <string name="end_trip">End Trip</string>
    <string name="bottom_sheet_choose_image">Choose Image</string>
    <string name="add_description">Add description</string>
    <string name="upload">Upload</string>
    <string name="upload_new_resource">Upload new place</string>
    <string name="minte">min</string>
    <string name="describe_the_trip">Describe the trip</string>
    <string name="end">End</string>
    <string name="add">Add</string>
    <string name="remove">remove</string>
    <string name="cancel">Cancel</string>
    <string name="delete_place">Delete Place</string>
    <string name="delete_your_place">do you want to delete your place?</string>
    <string name="my_places">My Places</string>
    <string name="my_favorites">My Favorites</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_comment">edit comment</string>
    <string name="delete_comment">delete comment</string>
    <string name="comments">Comments</string>
    <string name="enter_comment">enter comment</string>
    <string name="my_profile">My Profile</string>
    <string name="suggestions">Suggestions</string>
    <string name="select_risk_type">Select Risk Type</string>
    <string name="post">post</string>
    <string name="un_post">UnPost</string>
    <string name="click_agin_to_exit">Please click BACK again to exit</string>
    <string name="share_internal">Share internal</string>
    <string name="share_external">Share External</string>
    <string name="temporary_password">temporary password</string>
    <string name="send">send</string>
    <string name="confirm">تأكيد</string>
    <string name="new_password">new password</string>
    <string name="enter_your_registered_email_address_and_we_will_send_you_a_temporary_password">Enter your registered email address and we will send you a temporary password</string>
    <string name="old_password">old password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="change">change</string>
    <string name="password_not_match">Password not match</string>
    <string name="log_follow">you have followed</string>
    <string name="log_unfollow">you have unfollowed </string>
    <string name="log_like">you have liked trip </string>
    <string name="log_dislike">you have disliked trip </string>
    <string name="log_fav">you have added to favorite trip </string>
    <string name="log_unfav">you have unfavorite  trip </string>
    <string name="log_share">you have shared trip </string>
    <string name="log_comment">you have commented on trip </string>
    <string name="following_list">Following list</string>
    <string name="followers_list">followers list</string>
    <string name="blocks_list">Blocks list</string>
    <string name="logs_list">Logs list</string>
    <string name="subject">Subject</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="add_new_risk">Add new Risk</string>
    <string name="details">Details</string>
    <string name="select_location">Select Location</string>
    <string name="location_on_map">Location On Map</string>
    <string name="notifications">Notifications</string>
    <string name="change_language">Change Language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="activity_logs">Activity Logs</string>
    <string name="choose_risk_location">choose risk location</string>
    <string name="choose_risk_type">choose risk type</string>
    <string name="choose_image_risk">choose image first</string>
    <string name="profile">Profile</string>
    <string name="make_trips">make trips</string>
    <string name="you_can_now_start_a_trip_save_your_favorite_places_and_share_them_with_friends">You can now start a trip, save your favorite places and share them with friends</string>
    <string name="cautions">Cautions</string>
    <string name="get_recent_updates_about_traffic_jam_accidents_and_track_any_cause_of_delay_before_starting_your_trip">Get recent updates about traffic jam, accidents and track any cause of delay before starting your trip.</string>
    <string name="connect_with_other_users">Connect with other users</string>
    <string name="users_suggestions">Users Suggestions</string>
    <string name="share_your_best_moments_make_friends_and_enjoy_a_happy_trip">share your best moments, make friends and enjoy a happy trip</string>
    <string name="successful">Successful</string>
    <string name="risk">RISK</string>
    <string name="suggest">SUGGEST PLACE</string>
    <string name="places">Events</string>
    <string name="shared">Shared</string>
    <string name="public_text">Public</string>
    <string name="check_on_map">Check on map</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="store">Store</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="i_agree_to">i agree to</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="store_type">Store Type</string>
    <string name="bio">Bio</string>
    <string name="publish">Publish</string>
    <string name="change_privacy">Change Privacy</string>
    <string name="settings">Settings</string>
    <string name="get_notifications">Get Notifications</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="optional">Optional</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_new_place">Add new place</string>
    <string name="type">Choose type</string>
    <string name="risk_type">Risk Type</string>
    <string name="image">Image</string>
    <string name="upload_image_video">Upload image/Video</string>
    <string name="add_new_stop_point">Add new place</string>
    <string name="road_risks">Road Risks</string>
    <string name="suggested_places">Suggested Places</string>
    <string name="stores">Stores</string>
    <string name="add_branch">Add Branch</string>
    <string name="start_making_your_first_trip_and_post_it">Start making your first trip and post it!</string>
    <string name="this_user_dosnt_make_any_trips_yet">This user dosnt make any trips yet!</string>
    <string name="end_your_trip">End your trip</string>
    <string name="describe_your_trip">Describe your trip</string>
    <string name="trip_has">Trip has</string>
    <string name="started">Started!</string>
    <string name="cancel_triip">Cancel Trip?</string>
    <string name="cancel_confirm">did you want to cancel your trip?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="share_trip">Share Trip</string>
    <string name="private_text">Private</string>
    <string name="unfollow">Unfollow</string>
    <string name="look_around_and_star_something_you_like">Look around and star something you like!</string>
    <string name="no_favorites_to_show">No favorites to show</string>
    <string name="following_people_is_fun_you_should_try_it">Following people is fun, you should try it!</string>
    <string name="start_your_trip_of_making_a_lot_of_fans">Start your trip of making a lot of fans!</string>
    <string name="no_users_to_show">No users to show</string>
    <string name="we_hope_you_always_keep_this_page_clean">We hope you always keep this page clean</string>
    <string name="no_blocked_users">No blocked users</string>
    <string name="no_new_notifications">No new notifications</string>
    <string name="don_t_worry_you_didn_t_miss_anything">Don\'t worry, you didn\'t miss anything!</string>
    <string name="perhaps_you_need_to_start_doing_some_trips">Perhaps you need to start doing some trips</string>
    <string name="no_history_to_show">No history to show</string>
    <string name="looks_like_everything_is_under_control">Looks like everything is under control!</string>
    <string name="no_risks_at_the_moment">No Risks at the moment</string>
    <string name="sharing_with_us_your_favorite_places">sharing with us your favorite places!</string>
    <string name="no_trips_to_show">No Trips to show</string>
    <string name="what_is_drb">What is DRB</string>
    <string name="follow_us_on">Follow us on</string>
    <string name="please_add_your_store_from_below_button">Please add your store from below button</string>
    <string name="no_stores_to_show">No Stores to show</string>
    <string name="no_activities_to_show">No activities to show</string>
    <string name="you_really_should_start_using_our_app_more">You really should start using our app more!</string>
    <string name="skip">Skip</string>
    <string name="welcome">welcome</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="un_block">UnBlock</string>
    <string name="block">block</string>
    <string name="timeline">Timeline</string>
    <string name="map">Map</string>
    <string name="ef_ok">OK</string>
    <string name="ef_done">DONE</string>
    <string name="ef_camera">CAMERA</string>
    <string name="ef_title_folder">Folder</string>
    <string name="ef_title_select_image">Tap to select images</string>
    <string name="ef_ltitle_permission_denied">Permission denied</string>
    <string name="ef_selected">%d selected</string>
    <string name="ef_selected_with_limit">%1$d/%2$d selected</string>
    <string name="ef_error_create_image_file">Failed to create image file</string>
    <string name="ef_error_no_camera">No camera found</string>
    <string name="ef_error_null_cursor">Oops, something went wrong!</string>
    <string name="ef_msg_empty_images">No images found</string>
</resources>