<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"

    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Dialogs.EndTripDialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/end_your_trip"
            android:textColor="@color/black"
            android:textSize="18dp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/describe_your_trip"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_grey_small">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EndTrip_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/mid_color" />

    </RelativeLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_light"
            android:padding="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:weightSum="3">


                <RadioButton
                    android:id="@+id/EndTrip_Public"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="true"
                    android:text="@string/public_text"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/EndTrip_Followers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/followers"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/EndTrip_Private"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/private_text"
                    android:textColor="@color/black" />


            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_anchor="@+id/relativeLayout"
            app:layout_anchorGravity="end|top">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_trip"
                android:textColor="@color/dark_mid_color"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/EndTrip_posted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:checked="true" />


        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <Button
        android:id="@+id/EndTrip_End"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/border_layout_button"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>