<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_branch"
            android:textColor="@color/black" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_location"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/start_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_grey"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/AddPlace_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/mid_color"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_crosshairs_gps_grey600_18dp"
            android:tint="@color/mid_color" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/add_description"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_grey">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddPlace_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/mid_color" />

    </RelativeLayout>




    <Button
        android:id="@+id/AddPlace_Add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"

        android:layout_marginTop="30dp"
        android:background="@drawable/border_layout_button"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white" />



</LinearLayout>
